Updated test application

--- a/test.tml
+++ b/test.tml
@@ -8,4 +8,8 @@
 <Label X=47 Y=16 text="No" class="sub" id="no_label"/>
 <RadioButton value="no" X=50 Y=16 group="rating" id="no_rating"/>
 
+<Label text="Name" X=2 Y=6/>
+<Input X=2 Y=7 backgroundColour=128 width=15 focusedBackgroundColour=256 id="name_input"/>
+<Label X=2 Y=8 text="Enter your name" id="name_display" colour=256/>
+
 <Button text="Exit" X=41 Y=18 width=10 id="exit_button"/>
