--- a/test.tml
+++ b/test.tml
@@ -2,15 +2,16 @@
 <Label X=2 Y=3 text="Test Application" class="sub"/>
 
 <Label X=41 Y=15 text="Allow Exit"/>
-<Label X=41 Y=16 text="Yes" class="sub" id="yes_label" labelFor="yes_rating"/>
+<Label X=41 Y=16 text="Yes" class="sub" labelFor="yes_rating"/>
 <RadioButton value="yes" X=45 Y=16 group="rating" id="yes_rating"/>
 
-<Label X=47 Y=16 text="No" class="sub" id="no_label" labelFor="no_rating"/>
+<Label X=47 Y=16 text="No" class="sub" labelFor="no_rating"/>
 <RadioButton value="no" X=50 Y=16 group="rating" id="no_rating" toggled/>
 
-<Label text="Name" X=2 Y=6/>
-<Input X=2 Y=7 backgroundColour=128 width=18 focusedBackgroundColour=256 colour=256 focusedColour=128 id="name_input" placeholder="Your Name"/>
-<Label X=2 Y=8 text="Enter your name" id="name_display" colour=256/>
-<Label X=2 Y=10 text="No selected text" id="selected_name_display" colour=256/>
+<Label text="Name" X=2 Y=6 labelFor="name_input"/>
+<Input X=2 Y=7 width=18 id="name_input" placeholder="Your Name" focused="true"/>
+<Label X=2 Y=8 text="Enter your name" id="name_display" class="sub"/>
+<Label X=2 Y=10 text="No selected text" id="selected_name_display" class="sub"/>
 
 <Button text="Exit" X=41 Y=18 width=10 id="exit_button"/>
+<Button text="Toggle Theme" X=2 Y=18 height=1 width=14 id="toggle"/>
