--- a/test.tml
+++ b/test.tml
@@ -15,3 +15,8 @@
 
 <Button text="Exit" X=41 Y=18 width=10 id="exit_button"/>
 <Button text="Toggle Theme" X=2 Y=18 height=1 width=14 id="toggle"/>
+
+<Button text="Toggle Pane" X=2 Y=16 height=1 width=13 id="pane_toggle"/>
+<Button text="Config" width=8 height=1 X=42 Y=2 id="config_toggle"/>
+
+<Pane width=20 height=19 X=42 backgroundColour=grey id="pane"/>
