--- a/example/ui/master.tml
+++ b/example/ui/master.tml
@@ -16,7 +16,9 @@
 <Button text="Exit" X=41 Y=18 width=10 id="exit_button"/>
 <Button text="Toggle Theme" X=2 Y=18 height=1 width=14 id="toggle"/>
 
-<Button text="Toggle Pane" X=2 Y=16 height=1 width=13 id="pane_toggle"/>
+<Button text="Toggle Pane" X=2 Y=15 height=1 width=13 id="pane_toggle"/>
+<Label text="ctrl-p" X=5 Y=16 class="sub"/>
+
 <Button text="Config" width=8 height=1 X=42 Y=2 id="config_toggle"/>
 
 <Pane width=20 height=19 X=52 backgroundColour=grey id="pane"/>
