Removed X definitions from tml and moved to theme

--- a/example/ui/master.tml
+++ b/example/ui/master.tml
@@ -25,34 +25,35 @@
         <Label text="p" id="right" X=10 Y=16 class="sub hotkey_part"/>
 
         <Button text="Shell" width=7 height=1 X=43 Y=2 id="shell_toggle"/>
+        <Image X=29 Y=5 path="example/ui/logo"/>
 
         <Container id="pane" width=21 height=19 X=52 backgroundColour="grey">
             <Label text="Settings" colour=1 X=2 Y=2/>
 
             <ScrollContainer X=2 Y=4 width=20 height=10>
-                <Label text="Config 1" labelFor="config_1" X=2 Y=1/>
-                <Checkbox X=11 Y=1 id="config_1"/>
+                <Label text="Config 1" labelFor="config_1" Y=1/>
+                <Checkbox Y=1 id="config_1"/>
 
-                <Label text="Config 2" labelFor="config_2" X=2 Y=3/>
-                <Checkbox X=11 Y=3 id="config_2"/>
+                <Label text="Config 2" labelFor="config_2" Y=3/>
+                <Checkbox Y=3 id="config_2"/>
 
-                <Label text="Config 3" labelFor="config_3" X=2 Y=5/>
-                <Checkbox X=11 Y=5 id="config_3"/>
+                <Label text="Config 3" labelFor="config_3" Y=5/>
+                <Checkbox Y=5 id="config_3"/>
 
-                <Label text="Config 4" labelFor="config_4" X=2 Y=7/>
-                <Checkbox X=11 Y=7 id="config_4"/>
+                <Label text="Config 4" labelFor="config_4" Y=7/>
+                <Checkbox Y=7 id="config_4"/>
 
-                <Label text="Config 5" labelFor="config_5" X=2 Y=9/>
-                <Checkbox X=11 Y=9 id="config_5"/>
+                <Label text="Config 5" labelFor="config_5" Y=9/>
+                <Checkbox Y=9 id="config_5"/>
 
-                <Label text="Config 6" labelFor="config_6" X=2 Y=11/>
-                <Checkbox X=11 Y=11 id="config_6"/>
+                <Label text="Config 6" labelFor="config_6" Y=11/>
+                <Checkbox Y=11 id="config_6"/>
 
-                <Label text="Config 7" labelFor="config_7" X=2 Y=13/>
-                <Checkbox X=11 Y=13 id="config_7"/>
+                <Label text="Config 7" labelFor="config_7" Y=13/>
+                <Checkbox Y=13 id="config_7"/>
 
-                <Label text="Config 8" labelFor="config_8" X=2 Y=15/>
-                <Checkbox X=11 Y=15 id="config_8"/>
+                <Label text="Config 8" labelFor="config_8" Y=15/>
+                <Checkbox Y=15 id="config_8"/>
             </ScrollContainer>
 
             <Button text="Save Settings" width=17 height=3 X=3 Y=16 id="config_save"/>
