--- a/example/ui/master.tml
+++ b/example/ui/master.tml
@@ -28,7 +28,7 @@
         <Button text="Text" width=6 height=1 X="${#shell_link}.X - 2 - self.width" Y=2 class="page_change" targetPage="text" id="button_link"/>
         <Button text="Windows" width="$#self.text + 2" height=1 X="${#button_link}.X - 2 - self.width" Y=2 class="page_change" targetPage="windows"/>
 
-        <Dropdown X=23 Y=6 width=25 maxHeight=4>
+        <Dropdown X=23 Y=6 width=25 maxHeight=7 Z=2>
             <Option value="1">Example Option 1</Option>
             <Option value="2">Example Option 2</Option>
             <Option value="3">Example Option 3</Option>
@@ -45,7 +45,7 @@
         <Slider X=23 width=15 Y=11 id="animationSlider" value=2/>
         <Label X="${#animationSlider}.X + ( {#animationSlider}.width / 2 ) - self.width / 2" Y=12 text="${#animationSlider}.value * 0.15 .. 's'" id="animationD" class="sub"/>
 
-        <Container id="pane" width=21 height=19 X=52 backgroundColour="grey">
+        <Container id="pane" width=21 height=19 X=52 backgroundColour="grey" Z=3>
             <Label text="Settings" colour=1 X=2 Y=2/>
 
             <ScrollContainer X=2 Y=4 width=20 height=10>
